Not sure whats changed

--- a/Chemistry_Equations.ipynb
+++ b/Chemistry_Equations.ipynb
@@ -29,22 +29,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter in  a number 8\n",
-      "Hydrogen_ion_concentration 0.0000000000056\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pH 11.2518119729938\n"
+      "Enter in  a number8\n",
+      "Hydrogen_ion_concentration0.1\n",
+      "pH 1.0\n"
      ]
     }
    ],
